Add new resources and update login views

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,12 +3,12 @@
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="welcome">"Welcome !"</string>
+    <string name="action_sign_in">Sign in</string>
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
+    <string name="required">Required</string>
     <string name="login_failed">"Login failed"</string>
     <string name="title_user_list">Users</string>
     <string name="title_user_detail">User Detail</string>
+    <string name="invalid_info">Invalid username or password!</string>
 </resources>
