--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="title_user_list">Users</string>
     <string name="title_user_detail">User Detail</string>
     <string name="invalid_info">Invalid username or password!</string>
+	<string name="username">Username</string>
+	<string name="password">Password</string>
 </resources>
